<resources>
    <string name="app_name">Roy</string>

    <string name="battery_level_description">Battery level:</string>
    <string name="percent">%</string>

    <string name="no_data">No data</string>
    <string name="not_available">N/A</string>
    <string name="button_upload_local_battery_status">Upload battery status</string>
    <string name="button_download_remote_batteries_info">Download remote info</string>
    <string name="error_battery_check">Error</string>
    <string name="error_network_access">No Internet connection</string>

    <string name="battery_plugged_usb">Plugged USB</string>
    <string name="battery_plugged_ac">Plugged AC</string>
    <string name="battery_plugged_wireless">Plugged :) wireless</string>
    <string name="battery_not_plugged">Not plugged</string>
    <string name="battery_charging">Charging</string>
    <string name="battery_discharging">Discharging</string>

    <string name="battery_check_time_current">now</string>
    <string name="battery_check_time_ago">%s ago</string>
    <string name="battery_check_time_yesterday">yesterday</string>

    <string name="menu_action_gdrive">GDrive</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_clear_list">Clear list</string>
    <string name="menu_action_about">About</string>

    <string name="log_in_welcome">Welcome \u0020</string>
    <string name="logged_to_account">Logged to</string>
    <string name="logged_out">Logged out.</string>
    <string name="authentication_fail">Authentication failed.</string>
    <string name="google_play_services_error">Google Play Services error.</string>
    <string name="calling_drive_api">Calling Drive API ...</string>

    <string name="firebase_google_sign_in">Sign In</string>

    <string name="dialog_about_title"></string>
    <string name="dialog_about_version">Version: \u0020</string>
    <string name="dialog_about_saved_account_name">Saved account name: \u0020</string>
    <string name="dialog_about_credentials_account_name">Credentials account name: \u0020</string>
    <string name="dialog_about_firebase_address">Remote database: \u0020</string>
    <string name="dialog_about_ok">OK</string>
    <string name="dialog_about_version_name_error">\?</string>
    <string name="dialog_about_version_code_error">\?</string>
</resources>
