<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_fbase"
        android:title="@string/menu_action_gdrive"
        android:icon="@drawable/ic_cloud_off_white_24dp"
        android:orderInCategory="80"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_action_settings"
        android:orderInCategory="90"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_list"
        android:title="@string/menu_action_clear_list"
        android:orderInCategory="95"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>